<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:textAllCaps="true"
    android:text="@string/Titulo"
    android:gravity="center"
    android:textSize="@dimen/letraTitulo"
    android:layout_marginTop="@dimen/marginTopBase"
    android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/notaTxt"
            android:inputType="numberDecimal"
            android:hint="@string/nota"
            android:textSize="@dimen/letraBase"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <EditText
            android:id="@+id/porcentajeTxt"
            android:inputType="number"
            android:hint="@string/porcentaje"
            android:textSize="@dimen/letraBase"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/agregarBtn"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="@dimen/letraBase"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/primary_light"
            android:text="@string/agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

        <Button
            android:id="@+id/limpiarBtn"
            android:layout_weight="1"
            android:textSize="@dimen/letraBase"
            android:background="@color/colorNaranjo"
            android:textAllCaps="false"
            android:text="@string/limpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/marginTopBase"
        android:background="@color/colorPrimary"
        android:text="@string/subtitulo"
        android:textSize="@dimen/letraBase"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="@dimen/paddingBase"
        android:paddingBottom="@dimen/paddingBase"
        android:textColor="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
<ListView
    android:id="@+id/notasLv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

</ListView>
</LinearLayout>